--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/svg+xml" href="/react-wishlist/assets/favicon.6c6010f3.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/react-wishlist/assets/index.b8d61486.js"></script>
+    <title>Xavier Wishlist</title>
+    <script type="module" crossorigin src="/react-wishlist/assets/index.6a9c2a9d.js"></script>
     <link rel="stylesheet" href="/react-wishlist/assets/index.e1faf3cb.css">
   </head>
   <body>
