--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="icon" type="image/svg+xml" href="/react-wishlist/assets/favicon.6c6010f3.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Xavier Wishlist</title>
-    <script type="module" crossorigin src="/react-wishlist/assets/index.9f59b2e1.js"></script>
-    <link rel="stylesheet" href="/react-wishlist/assets/index.e9884064.css">
+    <script type="module" crossorigin src="/react-wishlist/assets/index.3a90ab3d.js"></script>
+    <link rel="stylesheet" href="/react-wishlist/assets/index.bc8510ff.css">
   </head>
   <body>
     <div id="root"></div>
